# ChangeLog for sys-devel/gcc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.940 2013/03/12 11:49:56 ago Exp $

  02 Apr 2013; Fabian Groffen <grobian@gentoo.org> files/fix_libtool_files.sh:
  Fix fix_libtool_files.sh files not to rely on EPREFIX in env, bug #458042

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.6.3.ebuild:
  Move back to ~sparc with the acknowledge of the sparc team, because of bug
  #457062

  02 Mar 2013; Ryan Hill <dirtyepic@gentoo.org> -gcc-4.7.2.ebuild,
  gcc-4.7.2-r1.ebuild:
  4.7.2 p1.5: Fixes PR56125 (wrong code with -ffast-math).

*gcc-4.7.2-r1 (25 Feb 2013)

  25 Feb 2013; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.7.2-r1.ebuild,
  -files/pro-police-docs.patch:
  4.7.2 p1.4: Fixes bug #451680 (bootstrap comparison failure on alpha),
  bug #421305 and #417271 (libitm build breakage), and PR55940 (incorrect
  code building virtualbox kernel modules). Revbump for unmasking.

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.6.3.ebuild:
  Stable for s390, wrt bug #418383

  07 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.6.3.ebuild:
  Stable for sh, wrt bug #418383

  22 Jan 2013; Jeroen Roovers <jer@gentoo.org> gcc-4.6.3.ebuild:
  Stable for HPPA (bug #418383).

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.6.3.ebuild:
  Stable for arm, wrt bug #418383

  21 Jan 2013; Ryan Hill <dirtyepic@gentoo.org> gcc-4.6.3.ebuild:
  Patchset 1.11. Fixes bug #451680 (bootstrap comparison failure on alpha) and
  bug #452768 (unable to find a register to spill in class 'VFP_LO_REGS' on
  arm).

  15 Jan 2013; Ryan Hill <dirtyepic@gentoo.org> gcc-4.6.3.ebuild:
  Patchset 1.10. Backport patch to fix ICE on arm (bug #401561).

  13 Jan 2013; Raúl Porcel <armin76@gentoo.org> gcc-4.6.3.ebuild:
  Move back to ~alpha, bug #451680

  09 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.6.3.ebuild:
  Stable for alpha, wrt bug #418383
